istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio
  namespace: istio-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: istio.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: istio-ingressgateway
            servicePort: 80
        - path: /kiali
          backend:
            serviceName: kiali
            servicePort: 20001
        - path: /grafana
          backend:
            serviceName: grafana
            servicePort: 3000
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - istio.sudojoss.com
